--- a/ansible/playbooks/satellite6-populate-template.yml
+++ b/ansible/playbooks/satellite6-populate-template.yml
@@ -7,7 +7,7 @@
     server: ansible_facts['fqdn']
   tasks:
     - name: Create lifecycle-environments
-      import_tasks: tasks/create_lifecycle_environment.yml
+      include_tasks: tasks/create_lifecycle_environment.yml
       loop:
         - lifecycle_environment_name: "DEV"
           organization: "Default Organization"
@@ -20,10 +20,10 @@
           prior: "QE"
 
     - name: Update the DOWNLOAD_POLICY to sync content.
-      import_tasks: tasks/satellite_setting.yml
+      include_tasks: tasks/satellite_setting.yml
       loop:
         - setting_name: "default_download_policy"
-          setting_value: "{{ lookup('env','DOWNLOAD_POLICY') }}"
+          setting_value: "{{ DOWNLOAD_POLICY }}"
 
     - name: Check if manifest already present or not.
       stat:
@@ -32,14 +32,194 @@
 
     - name: Fetch the manifest from server.
         get_url:
-          url: "{{ lookup('env','{MANIFEST_LOCATION_URL}') }}"
+          url: "{{ MANIFEST_LOCATION_URL }}"
           dest: "{{ lookup('env','HOME') }}/manifest-latest.zip"
         when: manifest_latest.stat.exists == true
 
     - name: Import Manifest.
-        import_tasks: tasks/manifest_upload.yml
+        include_tasks: tasks/manifest_upload.yml
         loop:
           - organization: "Default Organization"
             manifest_path: "{{ lookup('env','HOME') }}/manifest-latest.zip"
     - name: Enable Red Hat repositories
+        include_tasks: tasks/create_repository_set.yml
+        loop:
+          - organization: "Default Organization"
+            repo_name: "Red Hat Enterprise Linux 7 Server (Kickstart)"
+            product: "Red Hat Enterprise Linux Server"
+            releasever: "7.6"
+            basearch: "x86_64"
+          - organization: "Default Organization"
+              repo_name: "Red Hat Enterprise Linux 6 Server (Kickstart)"
+              product: "Red Hat Enterprise Linux Server"
+              releasever: "6.10"
+              basearch: "x86_64"
+          - organization: "Default Organization"
+              repo_name: "Red Hat Enterprise Linux 7 Server (RPMs)"
+              product: "Red Hat Enterprise Linux Server"
+              releasever: "7Server"
+              basearch: "x86_64"
+          - organization: "Default Organization"
+              repo_name: "Red Hat Enterprise Linux 6 Server (RPMs)"
+              product: "Red Hat Enterprise Linux Server"
+              releasever: "6Server"
+              basearch: "x86_64"
+          - organization: "Default Organization"
+              repo_name: "Red Hat Software Collections RPMs for Red Hat Enterprise Linux 7 Server"
+              product: "Red Hat Software Collections for RHEL Server"
+              releasever: "7Server"
+              basearch: "x86_64"
+
+    - name: Enable Red Hat repositories when SATELLITE_DISTRIBUTION = "BETA"
+        include_tasks: tasks/create_repository_set.yml
+        loop:
+          - organization: "Default Organization"
+              repo_name: "Red Hat Satellite Maintenance 6 Beta (for RHEL 7 Server) (RPMs)"
+              product: "Red Hat Enterprise Linux Server"
+              releasever: ""
+              basearch: "x86_64"
+          - organization: "Default Organization"
+              repo_name: "Red Hat Satellite Tools 6 Beta (for RHEL 7 Server) (RPMs)"
+              product: "Red Hat Enterprise Linux Server"
+              releasever: ""
+              basearch: "x86_64"
+          - organization: "Default Organization"
+              repo_name: "Red Hat Satellite Tools 6 Beta (for RHEL 6 Server) (RPMs)"
+              product: "Red Hat Enterprise Linux Server"
+              releasever: ""
+              basearch: "x86_64"
+          - organization: "Default Organization"
+              repo_name: "Red Hat Satellite Capsule 6 Beta (for RHEL 7 Server) (RPMs)"
+              product: "Red Hat Satellite Capsule Beta"
+              releasever: ""
+              basearch: "x86_64"
+          - organization: "Default Organization"
+              repo_name: "Red Hat Satellite Capsule 6 Beta (for RHEL 6 Server) (RPMs)"
+              product: "Red Hat Satellite Capsule Beta"
+              releasever: ""
+              basearch: "x86_64"
+        when: "{{ SATELLITE_DISTRIBUTION }}" == "BETA"
+
+    - name: Enable Foreman-Maintain repos for SATELLITE_DISTRIBUTION != "BETA"
+        include_tasks: tasks/create_repository_set.yml
+        loop:
+          - organization: "Default Organization"
+              repo_name: "Red Hat Satellite Maintenance 6 (for RHEL 7 Server) (RPMs)"
+              product: "Red Hat Enterprise Linux Server"
+              releasever: ""
+              basearch: "x86_64"
+        when:
+          - "{{ SATELLITE_DISTRIBUTION }}" != "BETA"
+
+    - name: Enable Red Hat repositories when SATELLITE_DISTRIBUTION = "BETA"
+        include_tasks: tasks/create_repository_set.yml
+        loop:
+          - organization: "Default Organization"
+              repo_name: "Red Hat Satellite Tools {{ SAT_VERSION }} (for RHEL 7 Server) (RPMs)"
+              product: "Red Hat Enterprise Linux Server"
+              releasever: ""
+              basearch: "x86_64"
+          - organization: "Default Organization"
+              repo_name: "Red Hat Satellite Tools {{ SAT_VERSION }} (for RHEL 6 Server) (RPMs)"
+              product: "Red Hat Enterprise Linux Server"
+              releasever: ""
+              basearch: "x86_64"
+          - organization: "Default Organization"
+              repo_name: "Red Hat Satellite Capsule {{ SAT_VERSION }} (for RHEL 7 Server) (RPMs)"
+              product: "Red Hat Enterprise Linux Server"
+              releasever: ""
+              basearch: "x86_64"
+          - organization: "Default Organization"
+              repo_name: "Red Hat Satellite Capsule {{ SAT_VERSION }} (for RHEL 6 Server) (RPMs)"
+              product: "Red Hat Enterprise Linux Server"
+              releasever: ""
+              basearch: "x86_64"
+        when: "{{ SATELLITE_DISTRIBUTION }}" == "GA"
+
     - name: Synchronize all repositories except for Puppet repositories which don't have URLs
+
+    - name: Get all repositories.
+      foreman_search_facts:
+        username: "{{ username }}"
+        password: "{{ password }}"
+        server_url: "{{ server }}"
+        resource: repositories
+      register: repositories
+
+    - name: Kick off repository Sync tasks. except for Puppet repositories which don't have URLs
+      katello_sync:
+        username: "{{ username }}"
+        password: "{{ password }}"
+        server_url: "{{ server }}"
+        product: "{{ item.product.name }}"
+        repository:  "{{ item.name }}"
+        organization: "Default Organization"
+      loop: "{{ repositories.resources }}"
+      when: item.url  # Not all repositories have a URL
+      async: 999999
+      poll: 0
+      register: repo_sync_sleeper
+
+    - name: Wait until all Syncs have finished
+      async_status:
+        jid: "{{ repo_sync_sleeper_item.ansible_job_id }}"
+      loop: "{{ repo_sync_sleeper.results }}"
+      loop_control:
+        loop_var: repo_sync_sleeper_item
+      when: repo_sync_sleeper_item.ansible_job_id is defined  # Skip items that were skipped in the previous task
+      register: async_job_result
+      until: async_job_result.finished
+      retries: 999
+      delay: 10
+
+    - name: Wait until all Syncs have finished
+      async_status:
+        jid: "{{ repo_sync_sleeper_item.ansible_job_id }}"
+      loop: "{{ repo_sync_sleeper.results }}"
+      loop_control:
+        loop_var: repo_sync_sleeper_item
+      when: repo_sync_sleeper_item.ansible_job_id is defined  # Skip items that were skipped in the previous task
+      register: async_job_result
+      until: async_job_result.finished
+      retries: 999
+      delay: 10
+
+    - name:  Create Repos and Sync Repositories. Create both Tools for RHEL6 and RHEL7 and Capsule for RHEL6 and RHEL7
+        include_tasks: tasks/create_repository.yml
+        loop:
+          - organization: "{{ organization }}"
+            product: "{{ RHEL6_TOOLS_PRD }}"
+            repo_name: "{{ RHEL6_TOOLS_REPO }}"
+            repo_url: "{{ RHEL6_TOOLS_URL }}"
+            download_policy: "{{ DOWNLOAD_POLICY }}"
+          - organization: "{{ organization }}"
+              product: "{{ RHEL7_TOOLS_PRD }}"
+              repo_name: "{{ RHEL7_TOOLS_REPO }}"
+              repo_url: "{{ RHEL7_TOOLS_URL }}"
+              download_policy: "{{ DOWNLOAD_POLICY }}"
+          - organization: "{{ organization }}"
+              product: "{{ SAT6C7_PRODUCT }}"
+              repo_name: "{{ CAPSULE7_REPO }}"
+              repo_url: "{{ CAPSULE7_URL }}"
+              download_policy: "{{ DOWNLOAD_POLICY }}"
+          - organization: "{{ organization }}"
+              product: "{{ SAT6M7_PRODUCT }}"
+              repo_name: "{{ MAINTAIN7_REPO }}"
+              repo_url: "{{ MAINTAIN7_URL }}"
+              download_policy: "{{ DOWNLOAD_POLICY }}"
+        when:
+          - "{{ SATELLITE_DISTRIBUTION }}" != "GA"
+          - "{{ SATELLITE_DISTRIBUTION }}" !== "BETA"
+
+    - name:  Create Repos and Sync Repositories for SAT_VERSION = "6.2". Create both Tools for RHEL6 and RHEL7 and Capsule for RHEL6 and RHEL7
+        include_tasks: tasks/create_repository.yml
+        loop:
+          - organization: "{{ organization }}"
+            product: "{{ SAT6C6_PRODUCT }}"
+            repo_name: "{{ CAPSULE6_REPO }}"
+            repo_url: "{{ CAPSULE6_URL }}"
+            download_policy: "{{ DOWNLOAD_POLICY }}"
+        when:
+          - "{{ SATELLITE_DISTRIBUTION }}" != "GA"
+          - "{{ SATELLITE_DISTRIBUTION }}" !== "BETA"
+          - "{{ SAT_VERSION }}" == "6.2"
