--- a/ansible/playbooks/satellite6-populate-template.yml
+++ b/ansible/playbooks/satellite6-populate-template.yml
@@ -50,25 +50,25 @@
             releasever: "7.6"
             basearch: "x86_64"
           - organization: "Default Organization"
-              repo_name: "Red Hat Enterprise Linux 6 Server (Kickstart)"
-              product: "Red Hat Enterprise Linux Server"
-              releasever: "6.10"
-              basearch: "x86_64"
+            repo_name: "Red Hat Enterprise Linux 6 Server (Kickstart)"
+            product: "Red Hat Enterprise Linux Server"
+            releasever: "6.10"
+            basearch: "x86_64"
           - organization: "Default Organization"
-              repo_name: "Red Hat Enterprise Linux 7 Server (RPMs)"
-              product: "Red Hat Enterprise Linux Server"
-              releasever: "7Server"
-              basearch: "x86_64"
+            repo_name: "Red Hat Enterprise Linux 7 Server (RPMs)"
+            product: "Red Hat Enterprise Linux Server"
+            releasever: "7Server"
+            basearch: "x86_64"
           - organization: "Default Organization"
-              repo_name: "Red Hat Enterprise Linux 6 Server (RPMs)"
-              product: "Red Hat Enterprise Linux Server"
-              releasever: "6Server"
-              basearch: "x86_64"
+            repo_name: "Red Hat Enterprise Linux 6 Server (RPMs)"
+            product: "Red Hat Enterprise Linux Server"
+            releasever: "6Server"
+            basearch: "x86_64"
           - organization: "Default Organization"
-              repo_name: "Red Hat Software Collections RPMs for Red Hat Enterprise Linux 7 Server"
-              product: "Red Hat Software Collections for RHEL Server"
-              releasever: "7Server"
-              basearch: "x86_64"
+            repo_name: "Red Hat Software Collections RPMs for Red Hat Enterprise Linux 7 Server"
+            product: "Red Hat Software Collections for RHEL Server"
+            releasever: "7Server"
+            basearch: "x86_64"
 
     - name: Enable Red Hat repositories when SATELLITE_DISTRIBUTION = "BETA"
         include_tasks: tasks/create_repository_set.yml
@@ -223,3 +223,16 @@
           - "{{ SATELLITE_DISTRIBUTION }}" != "GA"
           - "{{ SATELLITE_DISTRIBUTION }}" !== "BETA"
           - "{{ SAT_VERSION }}" == "6.2"
+
+    - name: Create content views
+        include_tasks: tasks/create_content_view.yml
+        loop:
+          - organization: "{{ organization }}"
+            cv_name: "RHEL 7 CV"
+          - organization: "{{ organization }}"
+            cv_name: "RHEL 6 CV"
+          - organization: "{{ organization }}"
+            cv_name: "Capsule RHEL 7 CV"
+
+    - name: Add content to content views
+    - name:
