--- a/ansible/playbooks/satellite6-populate-template.yml
+++ b/ansible/playbooks/satellite6-populate-template.yml
@@ -209,7 +209,7 @@
               download_policy: "{{ DOWNLOAD_POLICY }}"
         when:
           - "{{ SATELLITE_DISTRIBUTION }}" != "GA"
-          - "{{ SATELLITE_DISTRIBUTION }}" !== "BETA"
+          - "{{ SATELLITE_DISTRIBUTION }}" != "BETA"
 
     - name:  Create Repos and Sync Repositories for SAT_VERSION = "6.2". Create both Tools for RHEL6 and RHEL7 and Capsule for RHEL6 and RHEL7
         include_tasks: tasks/create_repository.yml
@@ -233,6 +233,103 @@
             cv_name: "RHEL 6 CV"
           - organization: "{{ organization }}"
             cv_name: "Capsule RHEL 7 CV"
+          - organization: "{{ organization }}"
+            cv_name: "Capsule RHEL 6 CV"
 
-    - name: Add content to content views
-    - name:
+    - name: Add content to content views RHEL 7 CV and RHEL 6 CV
+        include_tasks: tasks/add_content_to_cv.yml
+        loop:
+          - organization: "{{ organization }}"
+            cv_name: "RHEL 7 CV"
+            product: "Red Hat Enterprise Linux Server"
+            repo_name: "Red Hat Enterprise Linux 7 Server Kickstart x86_64 7.6"
+          - organization: "{{ organization }}"
+            cv_name: "RHEL 7 CV"
+            product: "Red Hat Enterprise Linux Server"
+            repo_name: "Red Hat Enterprise Linux 7 Server RPMs x86_64 7Server"
+          - organization: "{{ organization }}"
+            cv_name: "RHEL 7 CV"
+            product: "{{ RHEL7_TOOLS_PRD }}"
+            repo_name: "{{ RHEL7_TOOLS_REPO }}"
+          - organization: "{{ organization }}"
+            cv_name: "RHEL 6 CV"
+            product: "Red Hat Enterprise Linux Server"
+            repo_name: "Red Hat Enterprise Linux 6 Server Kickstart x86_64 6.10"
+          - organization: "{{ organization }}"
+            cv_name: "RHEL 6 CV"
+            product: "Red Hat Enterprise Linux Server"
+            repo_name: "Red Hat Enterprise Linux 6 Server RPMs x86_64 6Server"
+          - organization: "{{ organization }}"
+            cv_name: "RHEL 6 CV"
+            product: "{{ RHEL6_TOOLS_PRD }}"
+            repo_name: "{{ RHEL6_TOOLS_REPO }}"
+
+    - name: Publish and promote RHEL 7 CV and RHEL 6 CV
+        include_tasks: tasks/publish_and_promote_cv.yml
+        loop:
+          - organization: "{{ organization }}"
+            cv_name: "RHEL 7 CV"
+            lifecycle_environment: "DEV"
+          - organization: "{{ organization }}"
+            cv_name: "RHEL 6 CV"
+            lifecycle_environment: "DEV"
+    - name: Add content to content views Capsule RHEL 7 CV
+        include_tasks: tasks/add_content_to_cv.yml
+        loop:
+          - organization: "{{ organization }}"
+            cv_name: "Capsule RHEL 7 CV"
+            product: "Red Hat Enterprise Linux Server"
+            repo_name: "Red Hat Enterprise Linux 7 Server RPMs x86_64 7Server"
+          - organization: "{{ organization }}"
+            cv_name: "Capsule RHEL 7 CV"
+            product: "Red Hat Software Collections for RHEL Server"
+            repo_name: "Red Hat Software Collections RPMs for Red Hat Enterprise Linux 7 Server x86_64 7Server"
+          - organization: "{{ organization }}"
+            cv_name: "Capsule RHEL 7 CV"
+            product: "Red Hat Ansible Engine"
+            repo_name: "Red Hat Ansible Engine 2 RPMs for Red Hat Enterprise Linux 7 Server x86_64"
+          - organization: "{{ organization }}"
+            cv_name: "Capsule RHEL 7 CV"
+            product: "{{ RHEL7_TOOLS_PRD }}"
+            repo_name: "{{ RHEL7_TOOLS_REPO }}"
+          - organization: "{{ organization }}"
+            cv_name: "Capsule RHEL 7 CV"
+            product: "{{ SAT6C7_PRODUCT }}"
+            repo_name: "{{ CAPSULE7_REPO }}"
+          - organization: "{{ organization }}"
+            cv_name: "Capsule RHEL 7 CV"
+            product: "{{ SAT6M7_PRODUCT }}"
+            repo_name: "{{ MAINTAIN7_REPO }}"
+        when:
+          - "{{ RHELOS }}" == "7"
+    - name: Publish and promote Capsule RHEL 7 CV
+        include_tasks: tasks/publish_and_promote_cv.yml
+        loop:
+          - organization: "{{ organization }}"
+            cv_name: "Capsule RHEL 7 CV"
+        when:
+          - "{{ RHELOS }}" == "7"
+    - name: Add content to content views Capsule RHEL 6 CV
+        include_tasks: tasks/add_content_to_cv.yml
+        loop:
+          - organization: "{{ organization }}"
+            cv_name: "Capsule RHEL 6 CV"
+            product: "Red Hat Enterprise Linux Server"
+            repo_name: "Red Hat Enterprise Linux 6 Server RPMs x86_64 6Server"
+          - organization: "{{ organization }}"
+            cv_name: "Capsule RHEL 6 CV"
+            product: "{{ RHEL6_TOOLS_PRD }}"
+            repo_name: "{{ RHEL6_TOOLS_REPO }}"
+          - organization: "{{ organization }}"
+            cv_name: "Capsule RHEL 6 CV"
+            product: "{{ SAT6C6_PRODUCT }}"
+            repo_name: "{{ CAPSULE6_REPO }}"
+        when:
+          - "{{ RHELOS }}" != "7"
+    - name: Publish and promote Capsule RHEL 6 CV
+        include_tasks: tasks/publish_and_promote_cv.yml
+        loop:
+          - organization: "{{ organization }}"
+            cv_name: "Capsule RHEL 6 CV"
+        when:
+          - "{{ RHELOS }}" != "7"
