--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -4,3 +4,5 @@ callback_whitelist = profile_tasks
 inventory = inventory
 library = foreman-ansible-modules/plugins/modules
 module_utils = foreman-ansible-modules/plugins/module_utils
+doc_fragment_plugins = foreman-ansible-modules/plugins/doc_fragments
+retry_files_enabled = False
