--- a/ansible/playbooks/tasks/create_repository.yml
+++ b/ansible/playbooks/tasks/create_repository.yml
@@ -2,7 +2,7 @@
   katello_product:
     username: "{{ username }}"
     password: "{{ password }}"
-    server_url: "{{ server }}"
+    server_url: "{{ server_url }}"
     name: "{{ item.product }}"
     organization: "{{ item.organization }}"
     state: present
@@ -11,7 +11,7 @@
   katello_repository:
     username: "{{ username }}"
     password: "{{ password }}"
-    server_url: "{{ server }}"
+    server_url: "{{ server_url }}"
     name: "{{ item.repo_name }}"
     state: present
     content_type: "yum"
@@ -25,7 +25,7 @@
   katello_sync:
     username: "{{ username }}"
     password: "{{ password }}"
-    server_url: "{{ server }}"
+    server_url: "{{ server_url }}"
     repository: "{{ item.repo_name }}"
     product: "{{ item.product }}"
     organization: "{{ item.organization }}"
