--- a/ansible/playbooks/tasks/add_content_to_cv.yml
+++ b/ansible/playbooks/tasks/add_content_to_cv.yml
@@ -2,7 +2,7 @@
   katello_content_view:
     username: "{{ username }}"
     password: "{{ password }}"
-    server_url: "{{ server }}"
+    server_url: "{{ server_url }}"
     name: "{{ item.cv_name }}"
     organization: "{{ item.organization }}"
     repositories:
