--- a/ansible/playbooks/tasks/add_subscriptions_to_ak.yml
+++ b/ansible/playbooks/tasks/add_subscriptions_to_ak.yml
@@ -2,7 +2,7 @@
   katello_activation_key:
     username: "{{ username }}"
     password: "{{ password }}"
-    server_url: "{{ server }}"
+    server_url: "{{ server_url }}"
     name: "{{ item.ak_name }}"
     organization: "{{ item.organization }}"
     subscriptions: "{{ item.subscription_name }}"
