--- a/ansible/playbooks/tasks/create_lifecycle_environment.yml
+++ b/ansible/playbooks/tasks/create_lifecycle_environment.yml
@@ -3,9 +3,9 @@
   katello_lifecycle_environment:
     username: "{{ username }}"
     password: "{{ password }}"
-    server_url: "{{ server }}"
+    server_url: "{{ server_url }}"
     verify_ssl: False
-    name: "{{ item.lifecycle_environment }}"
+    name: "{{ item.lifecycle_environment_name }}"
     organization: "{{ item.organization }}"
     prior: "{{ item.prior }}"
-    state: 'present'
+    state: "present"
