--- a/ansible/playbooks/tasks/publish_and_promote_cv.yml
+++ b/ansible/playbooks/tasks/publish_and_promote_cv.yml
@@ -2,7 +2,7 @@
   katello_content_view_version:
     username: "{{ username }}"
     password: "{{ password }}"
-    server_url: "{{ server }}"
+    server_url: "{{ server_url }}"
     content_view: "{{ item.cv_name }}"
     organization: "{{ item.organization }}"
     lifecycle_environments:
