--- a/ansible/playbooks/tasks/satellite_setting.yml
+++ b/ansible/playbooks/tasks/satellite_setting.yml
@@ -3,6 +3,6 @@
   foreman_setting:
     username: "{{ username }}"
     password: "{{ password }}"
-    server_url: "{{ server }}"
+    server_url: "{{ server_url }}"
     name: "{{ item.setting_name }}"
     value: "{{ item.setting_value }}"
