--- a/ansible/playbooks/tasks/publish_and_promote_cv.yml
+++ b/ansible/playbooks/tasks/publish_and_promote_cv.yml
@@ -5,5 +5,4 @@
     server_url: "{{ server_url }}"
     content_view: "{{ item.cv_name }}"
     organization: "{{ item.organization }}"
-    lifecycle_environments:
-      - "{{ item.lifecycle_environment }}"
+    lifecycle_environments: "{{ item.lifecycle_environment }}"
